# template-cpp

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  CMakeLists.txt  CompilerWarnings.cmake  LICENSE  README.md  Sanitizers.cmake  StaticAnalysis.cmake  conanfile.py  conanfile.txt  project.org
app/: CMakeLists.txt  main.cpp
app/src/: main.cpp
core/: CMakeLists.txt  core.cpp
core/src/: core.h
core/test/: utest_core.cpp
somelib/: CMakeLists.txt
somelib/src/: somelib.cpp  somelib.h
somelib/test/: utest_somelib.cpp
